--- a/scare_prj/accounts/templates/accounts/signup.html
+++ b/scare_prj/accounts/templates/accounts/signup.html
@@ -6,10 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>회원가입</h2>
+    <h1>로고</h1>
     <form method="post" action="{% url 'accounts:signup' %}">
         {% csrf_token %}
-        {{ form.as_p }}
+        아이디: {{ form.username }}<br>
+        이메일: {{ form.email }}<br>
+        {{ form.password1.label_tag }} {{ form.password1 }}<br>
+        {{ form.password2.label_tag }} {{ form.password2 }}<br>
+        {% for choice in form.role %}
+            <div>
+                {{ choice.tag }}
+                <label for="{{ choice.id_for_label }}">{{ choice.choice_label }}</label>
+            </div>
+        {% endfor %}<br>
         <button type="submit">회원가입</button>
     </form>
 </body>
