마이페이지 내 정보 수정 기능

--- a/scare_prj/accounts/templates/accounts/comming_soon.html
+++ b/scare_prj/accounts/templates/accounts/comming_soon.html
@@ -14,5 +14,13 @@
     {% else %}
     부모
     {% endif %}<br>
+    
+    <hr>
+    <!-- nav bar -->
+    홈
+    체크리스트
+    기록
+    <a href="{% url 'accounts:mypage' %}">마이페이지</a>
+    
 </body>
 </html>
