알림 설정 기본 프레임

--- a/scare_prj/accounts/templates/accounts/gearing.html
+++ b/scare_prj/accounts/templates/accounts/gearing.html
@@ -29,6 +29,8 @@
     </style>
 </head>
 <body>
+    <a href="{%url 'accounts:mypage'%}">뒤로가기</a><br>
+    
     <!-- 내게 온 신청 -->
     <h2>내게 온 신청</h2>
     {% if follow_requests %}
