--- a/scare_prj/accounts/templates/accounts/mypage.html
+++ b/scare_prj/accounts/templates/accounts/mypage.html
@@ -13,7 +13,7 @@
     <hr>
     <a href="{% url 'accounts:myinfo_update' %}">내 정보 수정하기</a><br>
     <a href="{%url 'accounts:gearing' request.user.id %}">연동하기</a><br>
-    <a href="##">알람 설정</a><br>
+    <a href="{% url 'accounts:alarm' %}">알람 설정</a><br>
     <a href="{% url 'accounts:logout' %}">로그아웃</a><br>
     <hr>
     광고<br>
