--- a/scare_prj/accounts/templates/accounts/alarm.html
+++ b/scare_prj/accounts/templates/accounts/alarm.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>알림 설정</title>
+    {% load static%}
 </head>
 <body>
     <a href="{%url 'accounts:mypage'%}">뒤로가기</a><br>
+    <audio id="alarmSound" src="{% static 'audio_files/test.mp3' %}" preload="auto"></audio>
 
     <h2>앱 알람</h2>
-        <button>켜기</button>
-        <button>끄기</button>
+        <button id = "playButton">켜기</button>
+        <button id = "stopButton">끄기</button>
     <hr>
 
     <!--구독 서비스-->
@@ -31,5 +33,18 @@
     <h3> ▶ 구독 가격</h3>
     <ul><li><b>월 3,300원(VAT 300원)</b></li></ul>
     <button>구독</button>
+
+    <script>
+        document.getElementById('playButton').addEventListener('click', function() {
+            var audio = document.getElementById('alarmSound');
+            audio.play();
+        });
+
+        document.getElementById('stopButton').addEventListener('click', function() {
+            var audio = document.getElementById('alarmSound');
+            audio.pause();
+            audio.currentTime = 0; // 오디오를 처음으로 재설정
+        });
+    </script>
 </body>
 </html>
