체크리스트 기본 틀

--- a/scare_prj/accounts/templates/accounts/comming_soon.html
+++ b/scare_prj/accounts/templates/accounts/comming_soon.html
@@ -18,7 +18,7 @@
     <hr>
     <!-- nav bar -->
     홈
-    체크리스트
+    <a href="{% url 'checklist:home' %}">체크리스트</a>
     기록
     <a href="{% url 'accounts:mypage' %}">마이페이지</a>
     
