static 파일 이동 및 url 일부 수정

--- a/scare_prj/accounts/templates/accounts/mypage.html
+++ b/scare_prj/accounts/templates/accounts/mypage.html
@@ -17,5 +17,12 @@
     <a href="{% url 'accounts:logout' %}">로그아웃</a><br>
     <hr>
     광고<br>
+    
+    <hr>
+    <!-- nav bar -->
+    홈
+    체크리스트
+    기록
+    <a href="{% url 'accounts:mypage' %}">마이페이지</a>
 </body>
 </html>
