--- a/scare_prj/cal/templates/cal/home.html
+++ b/scare_prj/cal/templates/cal/home.html
@@ -43,5 +43,7 @@
     체크리스트
     기록
     <a href="{% url 'accounts:mypage' %}">마이페이지</a>
+    <br>
+    <a href="{% url 'cal:home2' year month %}">홈2</a>
 </body>
 </html>
