달력 기본 틀

--- a/scare_prj/cal/templates/cal/home2.html
+++ b/scare_prj/cal/templates/cal/home2.html
@@ -7,13 +7,9 @@
 </head>
 <body>
     <a href="{% url 'cal:home' %}">홈</a><br>
+    <h1>{{ year }}년 {{ month }}월</h1>
     <table class="month">
         <thead>
-            <tr>
-                <th colspan="7">{{ year }}년 {{ month }}월</th>
-            </tr>
-        </thead>
-        <tbody>
             <tr>
                 <th>일</th>
                 <th>월</th>
@@ -23,10 +19,12 @@
                 <th>금</th>
                 <th>토</th>
             </tr>
+        </thead>
+        <tbody>
             {% for row in cal_rows %}
                 <tr>
-                    {% for day in row %}
-                        <td>{{ day }}</td>
+                    {% for day, cls in row %}
+                        <td class="{{ cls }}">{{ day }}</td>
                     {% endfor %}
                 </tr>
             {% endfor %}
