--- a/scare_prj/accounts/templates/accounts/comming_soon.html
+++ b/scare_prj/accounts/templates/accounts/comming_soon.html
@@ -19,7 +19,7 @@
     <!-- nav bar -->
     홈
     <a href="{% url 'checklist:home' %}">체크리스트</a>
-    기록
+    <a href ="{%url 'record:home'%}">기록</a>
     <a href="{% url 'accounts:mypage' %}">마이페이지</a>
     
 </body>
