--- a/scare_prj/accounts/templates/accounts/comming_soon.html
+++ b/scare_prj/accounts/templates/accounts/comming_soon.html
@@ -17,10 +17,11 @@
     
     <hr>
     <!-- nav bar -->
-    홈
+    <a href = "{%url 'cal:home'%}">홈</a>
     <a href="{% url 'checklist:home' %}">체크리스트</a>
     <a href ="{%url 'record:home'%}">기록</a>
     <a href="{% url 'accounts:mypage' %}">마이페이지</a>
     
+    <a href="{%url 'checklist:notification_list' %}">알림</a>
 </body>
 </html>
