--- a/scare_prj/cal/templates/cal/home2.html
+++ b/scare_prj/cal/templates/cal/home2.html
@@ -48,13 +48,32 @@
                             
                             <!--달력에 일정 보여주기-->
                             {% for schedule in month_schedules %}
+                                <!--이번 달-->
                                 {% if cls == 'current-month' %}
-                                    {% if schedule.date.year == year %}
-                                        {% if schedule.date.month == month %}
-                                            {% if schedule.date.day == day %}
-                                                <div>{{ schedule.title }}</div>
-                                            {% endif %}
-                                        {% endif %}                            
+                                    {% if schedule.date.year == year and schedule.date.month == month and schedule.date.day == day %}
+                                                <div>{{ schedule.title }}</div>                         
+                                    {% endif %}
+                                <!--이전 달-->
+                                {% elif cls == 'prev-month' %}
+                                    {% if month == 1 %}
+                                        {% if schedule.date.year == year|add:-1 and schedule.date.month == 12 and schedule.date.day == day %}
+                                                    <div>{{ schedule.title }}</div>                         
+                                        {% endif %}
+                                    {% else %}
+                                        {% if schedule.date.year == year and schedule.date.month == month|add:-1 and schedule.date.day == day %}
+                                                    <div>{{ schedule.title }}</div>                         
+                                        {% endif %}
+                                    {% endif %}
+                                <!--다음 달-->
+                                {% elif cls == 'next-month' %}
+                                    {% if month == 12 %}
+                                        {% if schedule.date.year == year|add:1 and schedule.date.month == 1 and schedule.date.day == day %}
+                                                    <div>{{ schedule.title }}</div>                         
+                                        {% endif %}
+                                    {% else %}
+                                        {% if schedule.date.year == year and schedule.date.month == month|add:1 and schedule.date.day == day %}
+                                                    <div>{{ schedule.title }}</div>                         
+                                        {% endif %}
                                     {% endif %}
                                 {% endif %}
                             {% endfor %}
