--- a/scare_prj/accounts/templates/accounts/myinfo_update.html
+++ b/scare_prj/accounts/templates/accounts/myinfo_update.html
@@ -6,13 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="{{request.META.HTTP_REFERER|escape}}">뒤로 가기</a><br>
+    <a href="{%url 'accounts:mypage'%}">뒤로 가기</a><br>
     <form method="POST" action="{% url 'accounts:myinfo_update' %}" enctype="multipart/form-data">
         {% csrf_token %}
-        기존 프로필: <img width="100" height="100" src="{{ request.user.image.url }}"><br>
-        이미지 변경: <input type="file" name="image"><br>
+        기존 프로필: <img class="preview" id="profile-image" src="{{ request.user.image.url }}" width="100" height="100"><br>
+        이미지 변경: <input type="file" id="image-upload" name="image" accept="image/*"><br>
         이름: <input type="text" name="nickname" value="{{ info.nickname }}"><br>
         <input type="submit" value="수정하기">
     </form>
+    <script>
+        document.getElementById('image-upload').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            const reader = new FileReader();
+
+            reader.onload = function(e) {
+                document.getElementById('profile-image').src = e.target.result;
+            };
+
+            if (file) {
+                reader.readAsDataURL(file);
+            }
+        });
+    </script>
 </body>
 </html>
