--- a/scare_prj/cal/templates/cal/update_schedule.html
+++ b/scare_prj/cal/templates/cal/update_schedule.html
@@ -34,5 +34,6 @@
 
         <input type="submit" value="완료">
     </form>
+    <a href="{% url 'cal:delete_schedule' context.schedule.id %}">삭제하기</a>
 </body>
 </html>
