--- a/scare_prj/checklist/templates/checklist/update.html
+++ b/scare_prj/checklist/templates/checklist/update.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="{{request.META.HTTP_REFERER|escape}}">뒤로 가기</a><br>
+    
         <form method="post" action="{% url 'checklist:update' todo.id %}">
         {% csrf_token %}
         {{ form.as_p }}
