--- a/scare_prj/cal/templates/cal/update_schedule.html
+++ b/scare_prj/cal/templates/cal/update_schedule.html
@@ -5,6 +5,7 @@
     <title>일정 수정</title>
 </head>
 <body>
+    <a href="{{request.META.HTTP_REFERER|escape}}">뒤로 가기</a><br>
     <h1>일정 수정</h1>
     <form method="POST">
         {% csrf_token %}
@@ -32,6 +33,9 @@
         <input type="checkbox" name="related_words" value="{{ keyword }}" {% if keyword in context.schedule.related_words %}checked{% endif %}>{{ keyword }}<br>
         {% endfor %}
 
+        <label>관련 단어 추가:</label>
+        <input type="text" name="additional_word"><br><br>
+        
         <input type="submit" value="완료">
     </form>
     <a href="{% url 'cal:delete_schedule' context.schedule.id %}">삭제하기</a>
