--- a/scare_prj/checklist/templates/checklist/notifications.html
+++ b/scare_prj/checklist/templates/checklist/notifications.html
@@ -5,6 +5,8 @@
     <title>알림 리스트</title>
 </head>
 <body>
+    <a href="{{request.META.HTTP_REFERER|escape}}">뒤로 가기</a><br>
+    
     {%load humanize%}
     <h1>알림 리스트</h1>
 
