--- a/scare_prj/record/templates/record/home.html
+++ b/scare_prj/record/templates/record/home.html
@@ -19,5 +19,13 @@
     {% empty %} 작성된 기록이 없습니다. <hr> {% endfor %}
 
     <a href="{%url 'record:create' %}">글 작성하기</a>
+
+    <hr>
+    <!-- nav bar -->
+    <a href="{% url 'cal:home' %}">홈</a>
+    <a href="{% url 'checklist:home' %}">체크리스트</a>
+    <a href="{% url 'record:home' %}">기록</a>
+    <a href="{% url 'accounts:mypage' %}">마이페이지</a>
+    <br>
 </body>
 </html>
