--- a/scare_prj/cal/templates/cal/update_schedule.html
+++ b/scare_prj/cal/templates/cal/update_schedule.html
@@ -21,13 +21,14 @@
             <option value="{{ hour }}" {% if hour == context.selected_hour %}selected{% endif %}>{{ hour }}</option>
             {% endfor %}
         </select>
-        :
+        시
         <select name="time_minute">
             {% for minute in context.minutes %}
             <option value="{{ minute }}" {% if minute == context.selected_minute %}selected{% endif %}>{{ minute }}</option>
             {% endfor %}
-        </select><br><br>
-
+        </select>
+        분<br><br>
+        
         관련 단어:<br>
         {% for keyword in context.existing_keywords %}
         <input type="checkbox" name="related_words" value="{{ keyword }}" {% if keyword in context.schedule.related_words %}checked{% endif %}>{{ keyword }}<br>
@@ -35,7 +36,7 @@
 
         <label>관련 단어 추가:</label>
         <input type="text" name="additional_word"><br><br>
-        
+
         <input type="submit" value="완료">
     </form>
     <a href="{% url 'cal:delete_schedule' context.schedule.id %}">삭제하기</a>
