--- a/scare_prj/accounts/templates/accounts/mypage.html
+++ b/scare_prj/accounts/templates/accounts/mypage.html
@@ -22,7 +22,7 @@
     <a href="{% url 'accounts:alarm' %}">구독 서비스</a><br>
     <a href="{% url 'accounts:logout' %}">로그아웃</a><br>
     <hr>
-    광고<br>
+    <a href="https://likelion.notion.site/12th-HACKATHON-4cbaf4e34dd1441d9341aa46d197637f"><img src="https://i.ibb.co/wzP1pK9/LIKELION-UNIV-12th-pptx-cover-1.png" alt="LIKELION-UNIV-12th-pptx-cover-1"></a>
 
     <hr>
     <!-- nav bar -->
