--- a/scare_prj/checklist/templates/checklist/create.html
+++ b/scare_prj/checklist/templates/checklist/create.html
@@ -1,18 +1,66 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mk_checklist</title>
+    <link rel="stylesheet" href="CSS/mk_checklist.css">
+    <link rel="stylesheet" href="{% static 'css/mk_checklist.css' %}">
 </head>
+
 <body>
-    <a href="{{request.META.HTTP_REFERER|escape}}">뒤로 가기</a><br>
-    
-    <h1>체크리스트 항목 추가</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">저장</button>
-    </form>
+    <div class="title">
+        <a href="#"><img src="{% static 'images/Vector.png' %}" alt="뒤로가기" width="20.16" height="18.71"></a>
+        <h3>체크리스트 생성</h3>
+    </div>
+
+    <div class="content">
+        <form method="post" class="create_form">
+            <input type="text" required id="id_title" class="checklist_title">
+            <div class="date_div">
+                <h4 class="subtitle">날짜</h4>
+                <input type="date" name="title" id="id_due_date" name="due_date" id="" class="date">
+            </div>
+            <div class="time_div">
+                <h4 class="subtitle">시간</h4>
+                <input type="time" id="id_due_time" name="due_time" class="time">
+            </div>
+            <div class="repeat">
+                <h4 class="subtitle">반복</h4>
+                <div class="mon">
+                    <input type="checkbox" name="mon" value="mon">
+                    <label for="mon">월</label>
+                </div>
+                <div class="tue">
+                    <input type="checkbox" name="tue" value="tue">
+                    <label for="tue">화</label>
+                </div>
+                <div class="wed">
+                    <input type="checkbox" name="wed" value="wed">
+                    <label for="wed">수</label>
+                </div>
+                <div class="thur">
+                    <input type="checkbox" name="thur" value="thur">
+                    <label for="thur">목</label>
+                </div>
+                <div class="fri">
+                    <input type="checkbox" name="fri" value="fri">
+                    <label for="fir">금</label>
+                </div>
+                <div class="sat">
+                    <input type="checkbox" name="sat" value="sat">
+                    <label for="sat">토</label>
+                </div>
+                <div class="sun">
+                    <input type="checkbox" name="sun" value="sun">
+                    <label for="sun">일</label>
+                </div>
+            </div>
+            <button type="submit" class="submit_btn">완료</button>
+        </form>
+    </div>
 </body>
+
 </html>
