--- a/scare_prj/record/templates/record/create.html
+++ b/scare_prj/record/templates/record/create.html
@@ -1,21 +1,62 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>기록 작성</title>
+    <link rel="stylesheet" href="{% static 'css/document_create.css' %}">
 </head>
+
 <body>
-    <a href="{%url 'record:home'%}">뒤로 가기</a>
-    <h3>기록 생성</h3><hr>
-    <form action="{%url 'record:create'%}" method="POST" enctype="multipart/form-data">
-        {%csrf_token%}
-        <input type="text" placeholder="제목을 입력해주세요." name="title"><br>
-        <textarea placeholder="내용을 입력해주세요" name="content"></textarea><br>
-        <input type="file" name="image" value="이미지"><br>
-        <input type="submit" value="작성">
-    </form>
+    <div class="title">
+        <img src="{% static 'images/Logo.png' %}" alt="효담 로고" width="35" height="35" class="back">
+        <div>
+            <a href="{%url 'record:home'%}"><img src="{% static 'images/Vector.png' %}" width="20.16"
+                    height="18.71"></a>
+            <h3>기록 생성</h3>
+        </div>
+    </div>
+    <div class="content">
+        <form action="{%url 'record:create'%}" method="POST" enctype="multipart/form-data">
+            <div class="text_div">
+                <input type="text" name="title" class="text_title" placeholder="제목을 입력해 주세요." id="text_title">
+                <textarea class="text_content" name="content" placeholder="내용을 작성해 주세요." id="text_content"></textarea>
+            </div>
+            <div class="file_submit">
+                <input type="file" class="fileInput" value="이미지" id="fileInput">
+                <label class="fileInputLabel" id="fileInputLabel">
+                    <img src="{% static 'images/Imgupload.png' %}" alt="Upload Icon" width="30" height="30">
+                </label>
+                <div class="btn_div">
+                    <button type="reset" class="remove_content" id="remove_content">삭제</button><!--이건...?-->
+                    <button type="submit" value="작성" class="submit_btn">완료</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <script>
+        document.getElementById('fileInputLabel').addEventListener('click', function () {
+            document.getElementById('fileInput').click();
+        });
 
 
+        const textInput = document.getElementById('text_title');
+        const textArea = document.getElementById('text_content');
+        const submitButton = document.getElementById('remove_content');
+
+        function checkInput() {
+            if (textInput.value.trim() !== '' && textArea.value.trim() !== '') {
+                submitButton.classList.add('active');
+            } else {
+                submitButton.classList.remove('active');
+            }
+        }
+
+        textInput.addEventListener('input', checkInput);
+        textArea.addEventListener('input', checkInput);
+    </script>
 </body>
+
 </html>
