--- a/scare_prj/record/templates/record/home.html
+++ b/scare_prj/record/templates/record/home.html
@@ -1,31 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>기록</title>
+    <title>Document_main</title>
+    <link rel="stylesheet" href="{% static 'css/document_main.css' %}">
 </head>
+
 <body>
-    로고
-    <hr>
-    {% for record in records %}
-    <h2><a href="{%url 'record:detail' record.id %}">{{ record.title }}</a></h2>
-    <p>{{record.content}}</p>
-    {%if record.image %}
-        <img src="{{record.image.url}}">
-    {%endif%}
-    <p>{{record.created_at|date:"Y.m.d"}}</p><hr>
-
-    {% empty %} 작성된 기록이 없습니다. <hr> {% endfor %}
-
-    <a href="{%url 'record:create' %}">글 작성하기</a>
-
-    <hr>
-    <!-- nav bar -->
-    <a href="{% url 'cal:home' %}">홈</a>
-    <a href="{% url 'checklist:home' %}">체크리스트</a>
-    <a href="{% url 'record:home' %}">기록</a>
-    <a href="{% url 'accounts:mypage' %}">마이페이지</a>
-    <br>
+    <div class="title">
+        <img src="{% static 'images/Logo.png' %}" alt="효담 로고" width="35" height="35">
+    </div>
+    <div class="content">
+        {% for record in records %}
+        <div class="post">
+            <h3 class="post_title"><a href="{%url 'record:detail' record.id %}">{{ record.title }}</a></h3>
+            <p class="post_content">{{record.content}}</p>
+            {%if record.image %}
+            <img src="{{record.image.url}}">
+            {%endif%}
+            <p class="date">{{record.created_at|date:"Y.m.d"}}</p>
+        </div>
+        {% empty %} 작성된 기록이 없습니다.{% endfor %}
+    </div>
+    <a href="{%url 'record:create' %}"><img src="{% static 'images/Plus.png' %}" class="plus"></a>
 </body>
+
 </html>
